<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvUpFormPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_form_textview_path"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUpFormPath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/upload_form_edittext_path_hint"
            android:textColor="#000000" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvUpFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_form_textview_name"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUpFormName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/upload_form_edittext_title_hint"
            android:textColor="#000000" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvUpFormDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_form_textview_duration"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUpFormDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/upload_form_edittext_duration_hint"
            android:textColor="#000000" />

    </LinearLayout>    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvUpFormDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_form_textview_description"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editUpFormDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/upload_form_edittext_description_hint"
            android:textColor="#000000" />

    </LinearLayout>
        
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/pics_icon" />
    
    <Button
        android:id="@+id/uploadButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_upload_btn" />
    
 </LinearLayout>